# libran

./: .gitignore  Cargo.toml  Cross.toml  README.md  _config_analysis.py  _readcfg.py  _verify_cfg.py  documentation.md  theme_plugin_manual.md  widget_manual.md
.ctx/: config.toml
.ctx/cache/: index-report.json  index-state.json
.omo/: boulder.json
.omo/plans/: citation-export-phase3.md  citation-export.md  korean-substring-search.md  libran-15-gap-fix.md
.opencode/: tui.json
.opencode/commands/: ctx-ask.md  ctx-benchmark-memory-ab.md  ctx-benchmark-memory-suite.md  ctx-compare.md  ctx-dashboard.md  ctx-doctor.md  ctx-explain.md  ctx-gain.md  ctx-graph-build.md  ctx-graph-query.md  ctx-graph-rebuild.md  ctx-help.md  ctx-hook.md  ctx-index.md  ctx-init.md  ctx-learn.md  ctx-mcp-config-opencode.md  ctx-mcp-serve.md  ctx-mcp-stdio.md  ctx-memory-bootstrap.md  ctx-memory-delete.md  ctx-memory-export.md  ctx-memory-get.md  ctx-memory-import.md  ctx-memory-list.md  ctx-memory-search.md  ctx-memory-set.md  ctx-opencode-install.md  ctx-pack.md  ctx-plan.md  ctx-prune-diff.md  ctx-prune-logs.md  ctx-read.md  ctx-reindex.md  (+8 more)
assets/: msc_ko.csv  physh_ko.csv  udc_top_ko.csv
examples/: design_a_dual_panel.rs  design_b_three_pane.rs  design_b_v2.rs  design_b_v3.rs  design_c_tabs.rs  design_d_compact.rs  design_e_linear.rs  design_f_tokyo_night.rs  design_final.rs  design_g_editorial.rs  design_h_neo_grid.rs  test_final.rs
src/: lib.rs  main.rs
tests/: citation.rs  database.rs  export_user_data.rs  forward_citations.rs  golden_file_tests.rs  style_golden_tests.rs
(+152 files in other folders)
