[package]
name = "libran"
version = "0.1.0"
edition = "2024"
default-run = "libran"
description = "Offline-first Rust-based CUI bibliographic management system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/honey/libran"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
lopdf = "0.37"
unpdf = "=0.7.0"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
regex = "1"
once_cell = "1"
oxrdf = "0.2"
oxrdfio = "0.1"
quick-xml = "0.36"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
toml = "0.8"
strsim = "0.11"
unicode-normalization = "0.1"
petgraph = "0.6"
urlencoding = "2"
arboard = "3"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
